[REFACTOR] Use SpecificationBuilder and improved code readability